--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -2,8 +2,6 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6" id="img-bg"></div>
-
-
             <div class="col-md-6 mt-5 mb-5">
                 <div class="row d-flex justify-content-center">
 
@@ -32,7 +30,12 @@
 
                         <div class="form-group ">
                             <label for="confirSenha "> Confirmar senha:</label>
-                            <input type="password " placeholder="Confirme sua senha " id="confirSenha " class="form-control " />
+                            <input type="password" placeholder="Confirme sua senha " id="confirSenha " class="form-control " />
+                        </div>
+
+                        <div class="form-group ">
+                            <label for="dataNasc"> Data de Nascimento:</label>
+                            <input class="form-control" type="date" id="dataNasc" name="dataNasc" />
                         </div>
 
 
@@ -45,9 +48,9 @@
                             </select>
                         </div>
 
-                        <div class="d-flex justify-content-center mt-5">
-                            <button type="submit " class="btn btn-danger mr-5 ">Cancelar </button>
-                            <button type="submit " class="btn btn-success ">Cadastrar</button>
+                        <div class="d-flex justify-content-around mt-5 ">
+                            <button type="submit " class="btn btn-outline-danger px-5 ">Cancelar </button>
+                            <button type="submit " class="btn btn-outline-success px-5 ">Cadastrar</button>
 
                         </div>
 
