--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -49,8 +49,8 @@
                         </div>
 
                         <div class="d-flex justify-content-around mt-5 ">
-                            <button type="submit " class="btn btn-outline-danger px-5 ">Cancelar </button>
-                            <button type="submit " class="btn btn-outline-success px-5 ">Cadastrar</button>
+                            <button type="submit " class="btn btn-outline-danger px-5 button1">Cancelar </button>
+                            <button type="submit " class="btn btn-outline-success px-5 button2">Cadastrar</button>
 
                         </div>
 
