--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,43 +1,116 @@
-    *margin {
-        margin: 0;
-        padding: 0;
-    }
-    
-    body {
-        background-image: linear-gradient(rgba(253, 253, 253, 0.4), rgba(253, 253, 253, 0.4)), url("https://i.imgur.com/FGrvS6j.jpg");
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-    }
-    
-    h1 {
-        /* font-family: 'Cinzel', serif; */
-        font-family: 'Nosifer', cursive;
-        font-weight: bold;
-        color: rgb(0, 0, 0);
-        text-shadow: 0.1em 0.1em rgba(61, 3, 3, 0.323);
-        margin-bottom: 2rem;
-    }
-    
-    label,
-    p {
-        font-family: 'Cinzel', serif;
-        font-weight: bold;
-        font-size: 1rem;
-        color: black;
-    }
-    
-    hr {
-        background-color: rgb(202, 3, 3);
-    }
-    
-    #bg-img {
-        background-image: linear-gradient(rgba(90, 3, 3, 0.4), rgba(255, 217, 0, 0.172)), url("https://i.imgur.com/X89SL1E.jpg");
-        min-height: 100vh;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-    
-    a {
-        color: rgb(196, 5, 5);
-    }
+*margin {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://i.imgur.com/FGrvS6j.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.caixaLogin {
+    background: linear-gradient(rgba(33, 1, 1, 0.481), rgba(136, 2, 2, 0.59));
+    padding: 1rem;
+    border-radius: 2rem 1rem 2rem 1rem;
+    box-shadow: 0 2rem 2rem;
+    position: relative;
+}
+
+.caixaLogin .campo input {
+    width: 100%;
+    padding: 10px;
+    font-size: 17px;
+    background: transparent;
+    color: #ffffff;
+    letter-spacing: 5px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #ffffff;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+.caixaLogin .campo {
+    position: relative;
+}
+
+.caixaLogin .campo label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.caixaLogin .campo input:focus~label,
+.caixaLogin .campo input:valid~label {
+    top: -20px;
+    left: 0;
+    color: rgba(255, 183, 0, 0.412);
+    font-size: 12px;
+}
+
+.checkbox2 {
+    margin-top: -6px;
+    color: #ffffff;
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+}
+
+
+/*ja estava*/
+
+.caixaLogin h1 {
+    /* font-family: 'Cinzel', serif; */
+    font-family: 'Nosifer', cursive;
+    color: rgb(255, 255, 255);
+    /* text-shadow: 0.1em 0.1em rgba(255, 183, 0, 0.412); */
+}
+
+
+/* label {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #ffffff;
+    letter-spacing: .1rem;
+    width: 15rem;
+    font-weight: bold;
+} */
+
+p {
+    font-family: 'Cinzel', serif;
+    font-size: 1rem;
+    color: rgb(255, 255, 255);
+}
+
+hr {
+    background-color: rgb(255, 183, 0);
+}
+
+a {
+    color: rgb(255, 183, 0);
+}
+
+.button1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+    font-weight: bold;
+    color: rgb(252, 252, 252);
+    border: 1px solid rgb(255, 183, 0);
+}
+
+#bg-img {
+    background-image: linear-gradient(rgba(90, 3, 3, 0.4), rgba(255, 217, 0, 0.172)), url("https://i.imgur.com/X89SL1E.jpg");
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
