--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -2,23 +2,26 @@
     <div class="container-fluid">
 
         <div class="row d-flex align-items-center">
-            <div class="col-md-6">
+            <div class="col-md-6 caixaLogin">
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
-                        <h1 class="text-center"> Entrar </h1>
-                        <div class="form-group">
+                        <h1 class="text-center mt-4 mb-5 "> Logar no Blog</h1>
+                        <div class="form-group campo">
+                            <input type="text" id="usuario" class="form-control" />
                             <label for="usuario"> Usuário:</label>
-                            <input type="text" placeholder="Usuário" id="usuario" class="form-control" />
                         </div>
-                        <div class="form-group">
+                        <div class="form-group campo">
+                            <input type="password" placeholder="" id="suario" class="form-control" />
                             <label for="senha"> Senha:</label>
-                            <input type="password" placeholder="Senha" id="suario" class="form-control" />
                         </div>
-
+                        <div class="form-group d-flex justify-content-center mb-4">
+                            <input type="checkbox" checked="checked" name="checked" id="checked" class="checked mr-2">
+                            <label class="checkbox2">Lembrar-me</label>
+                        </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class=" btn btn-dark">Entrar</button>
+                            <button type="submit" class=" btn button1 px-5">Entrar</button>
                         </div>
-                        <hr class="mt-5 mb-5">
+                        <hr class="mt-4 mb-4">
                         <div>
 
                             <p class=" text-center">Não tem uma conta?<a href=""> Cadastre-se </a></p>
