paginas entrando em cada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <body>
-    <app-menu></app-menu>
 
+
+    <router-outlet></router-outlet>
+
+
+    <!-- 
+         <app-menu></app-menu>
+          <app-rodape></app-rodape>
     <app-entrar></app-entrar>
 
-    <app-cadastrar></app-cadastrar>
-
-    <app-rodape></app-rodape>
+    <app-cadastrar></app-cadastrar> -->
 
 </body>
