--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://i.imgur.com/FGrvS6j.jpg");
+    background-image: linear-gradient(rgba(182, 182, 182, 0.159), rgba(182, 182, 182, 0.138)), url("https://i.imgur.com/FGrvS6j.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -24,25 +24,71 @@ body {
     background-size: cover;
 }
 
+.caixaLogin {
+    background: linear-gradient(rgba(33, 1, 1, 0.481), rgba(136, 2, 2, 0.59));
+    padding: 1rem;
+    border-radius: 0;
+    box-shadow: 0 2rem 2rem;
+    position: relative;
+}
+
+.caixaLogin .campo input {
+    width: 100%;
+    padding: 10px;
+    font-size: 17px;
+    background: transparent;
+    color: #ffffff;
+    letter-spacing: 5px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #ffffff;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+.caixaLogin .campo {
+    position: relative;
+}
+
+.caixaLogin .campo label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.caixaLogin .campo input:focus~label {
+    top: -20px;
+    left: 0;
+    color: rgba(255, 183, 0, 0.412);
+    font-size: 12px;
+}
+
 h1 {
     /* font-family: 'Cinzel', serif; */
     font-family: 'Nosifer', cursive;
     font-weight: bold;
     color: rgb(255, 255, 255);
-    text-shadow: 0.1em 0.1em rgba(255, 0, 0, 0.474);
+    /* text-shadow: 0.1em 0.1em rgba(255, 0, 0, 0.474); */
     margin-bottom: 2rem;
 }
 
-label {
+
+/* label {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #ffffff;
     letter-spacing: .1rem;
     width: 15rem;
     font-weight: bold;
-    /* background: linear-gradient(rgba(80, 3, 3, 0.4), rgba(19, 18, 18, 0.4)); */
-    /* text-align: center; */
-    /* text-shadow: #150000 -1px -1px; */
-}
+    
+} */
 
 .button1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
