--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -24,7 +24,7 @@
                         <hr class="mt-4 mb-4">
                         <div>
 
-                            <p class=" text-center">Não tem uma conta?<a href=""> Cadastre-se </a></p>
+                            <p class=" text-center">Não tem uma conta?<a href="" routerLink="/cadastrar"> Cadastre-se </a></p>
 
                         </div>
                     </div>
