--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -48,6 +48,12 @@ body {
     -moz-box-sizing: border-box;
 }
 
+input:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+}
+
 .caixaLogin .campo {
     position: relative;
 }
@@ -56,6 +62,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    outline: none;
     padding: 10px 0;
     font-size: 16px;
     color: #ffffff;
@@ -64,44 +71,56 @@ body {
     transition: .5s;
 }
 
-.caixaLogin .campo input:focus~label {
+.caixaLogin .campo input:focus~label,
+.caixaLogin .campo input:valid~label {
     top: -20px;
     left: 0;
-    color: rgba(255, 183, 0, 0.412);
+    color: #ffffff;
     font-size: 12px;
+}
+
+
+/*deixando os campos data e select tranparente*/
+
+.textoColor,
+input,
+select {
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: transparent;
+}
+
+input:focus {
+    color: #ffffff;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: transparent;
+    /*campo*/
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
 }
 
 h1 {
     /* font-family: 'Cinzel', serif; */
     font-family: 'Nosifer', cursive;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: #ffffff;
     /* text-shadow: 0.1em 0.1em rgba(255, 0, 0, 0.474); */
     margin-bottom: 2rem;
 }
-
-
-/* label {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: #ffffff;
-    letter-spacing: .1rem;
-    width: 15rem;
-    font-weight: bold;
-    
-} */
 
 .button1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
     font-weight: bold;
-    color: rgb(252, 252, 252);
-    border: 2px solid rgb(202, 3, 3);
+    color: #ffffff;
+    border: 1px solid rgb(202, 3, 3);
 }
 
 .button2 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
     font-weight: bold;
-    color: rgb(252, 252, 252);
-    border: 2px solid rgb(3, 202, 43);
+    color: #ffffff;
+    border: 1px solid rgb(3, 202, 43);
 }
