--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -10,42 +10,42 @@
 
                         <div class="form-group campo">
 
-                            <input type="text" placeholder="" id="nome" class="form-control" /><label for="nome"> Nome:</label>
+                            <input type="text" id="nome" class="form-control" required/>
+                            <label for="nome"> Nome:</label>
                         </div>
 
-                        <div class=" form-group campo ">
-
-                            <input type="text " placeholder="" id="usuario " class="form-control" />
-                            <label for="usuario "> Usuário:</label>
+                        <div class="form-group campo">
+                            <input type="text" id="usuario" class="form-control" required/>
+                            <label for="usuario"> Usuário:</label>
                         </div>
 
                         <div class=" form-group campo">
-                            <input type="text " placeholder="" id="foto " class="form-control" />
+                            <input type="text " id="foto " class="form-control" required />
                             <label for="foto "> Link da Foto:</label>
 
                         </div>
 
                         <div class=" form-group campo">
-                            <input type="password " placeholder=" " id="suario " class="form-control " />
+                            <input type="password " id="suario " class="form-control " required />
                             <label for="senha "> Senha:</label>
 
                         </div>
 
                         <div class="form-group campo">
-                            <input type="password" placeholder=" " id="confirSenha " class="form-control " />
+                            <input type="password" id="confirSenha " class="form-control " required />
                             <label for="confirSenha "> Confirmar senha:</label>
 
                         </div>
 
                         <div class="form-group  ">
-                            <label for="dataNasc " class="mb-2 text-light"> Data de Nascimento:</label>
+                            <label for="dataNasc " class="mb-2 textoColor"> Data de Nascimento:</label>
                             <input class="form-control " type="date" id="dataNasc" name="dataNasc" />
 
 
                         </div>
 
 
-                        <div class="form-group text-light mt-4">
+                        <div class="form-group textoColor mt-4">
                             <label for="tipo "> Tipo de Usuário:</label>
                             <select class="form-control " name="tipo " id="tipo ">
                                 <option >Selecione um tipo de usuário</option>
