--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -5,13 +5,13 @@
             <div class="col-md-6 caixaLogin">
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
-                        <h1 class="text-center mt-4 mb-5 "> Logar no Blog</h1>
+                        <h1 class="text-center mt-4 mb-5 "> ENTRAR </h1>
                         <div class="form-group campo">
-                            <input type="text" id="usuario" class="form-control" />
+                            <input type="text" id="usuario" class="form-control" required/>
                             <label for="usuario"> Usuário:</label>
                         </div>
                         <div class="form-group campo">
-                            <input type="password" placeholder="" id="suario" class="form-control" />
+                            <input type="password" placeholder="" id="suario" class="form-control" required/>
                             <label for="senha"> Senha:</label>
                         </div>
                         <div class="form-group d-flex justify-content-center mb-4">
@@ -19,7 +19,7 @@
                             <label class="checkbox2">Lembrar-me</label>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class=" btn button1 px-5">Entrar</button>
+                            <button type="submit" class=" btn btn-outline-dark px-5 button1">Entrar</button>
                         </div>
                         <hr class="mt-4 mb-4">
                         <div>
