Atualizando os campos para ficar transparente e redirecionando as paginas

--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -19,7 +19,7 @@
                             <label class="checkbox2">Lembrar-me</label>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class=" btn btn-outline-dark px-5 button1">Entrar</button>
+                            <button type="submit" class=" btn btn-outline-dark px-5 button1" routerLink="/menu">Entrar</button>
                         </div>
                         <hr class="mt-4 mb-4">
                         <div>
