--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,40 +1,42 @@
-<footer class="page-footer font-small footerfundo pt-3">
-    <div class="container">
-        <div class="row">
+<body>
+    <footer class="page-footer font-small footerfundo pt-3">
+        <div class="container">
+            <div class="row">
 
-            <div class="col-md-12 d-flex justify-content-center">
-                <h4>Siga-nos nas redes sociais</h4>
+                <div class="col-md-12 d-flex justify-content-center">
+                    <h4>Siga-nos nas redes sociais</h4>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center">
+
+                    <ul class="social-network">
+                        <li>
+                            <a href="https://www.linkedin.com/in/jessica-f-oliveira-330b091a5/" target="_blank" class="icoLinkeDin">
+                                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://github.com/JessyOliver" target="_blank" class="icoGitHub">
+                                <i class="fa fa-github-square" aria-hidden="true"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="col-md-12 d-flex justify-content-center">
+        <div class="footer-copyright footerfundo2 text-center py-3">
+            <span class="text-light"> @ 2021 Copyright:  </span>
+            <a class="text-light" href="https://github.com/JessyOliver" target="_blank"> https://github.com/JessyOliver </a>
 
-                <ul class="social-network">
-                    <li>
-                        <a href="https://www.linkedin.com/in/jessica-f-oliveira-330b091a5/" target="_blank" class="icoLinkeDin">
-                            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="https://github.com/JessyOliver" target="_blank" class="icoGitHub">
-                            <i class="fa fa-github-square" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
         </div>
-    </div>
 
 
-    <div class="footer-copyright bg-dark text-center py-3">
-        <span class="text-light"> @ 2021 Copyright:  </span>
-        <a class="text-light" href="https://github.com/JessyOliver" target="_blank"> https://github.com/JessyOliver </a>
-
-    </div>
-
-
-</footer>
+    </footer>
+</body>
