--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,21 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Nosifer&display=swap');
 
+/*coomponentes extras*/
+
+*margin {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: linear-gradient(rgba(182, 182, 182, 0.159), rgba(182, 182, 182, 0.138)), url("https://i.imgur.com/FGrvS6j.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
 /*conteudo edit pagina*/
 
 .menufundo {
-    background: linear-gradient(rgba(51, 51, 51, 0.192), rgba(9, 0, 0, 0.378));
-    font-family: 'Cinzel', serif;
+    background: linear-gradient(rgba(223, 220, 220, 0.096), rgba(182, 182, 182, 0.09));
 }
 
 p,
 a {
-    color: black;
+    color: #ffffff;
+    font-size: 16pt;
+    font-family: 'Cinzel', serif;
 }
 
+
+/* 
 .fs-16 {
     font-size: 16pt;
-}
+} */
 
 a {
     cursor: pointer;
