--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light menufundo">
+    <nav class="navbar navbar-expand-lg  menufundo">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,11 +11,11 @@
                     <img src="https://i.imgur.com/2RFOpwL.jpg" alt="imagem do usuario" width="50px" height="50px" class="img-fluid rounded-circle">
                 </li>
                 <li class=" nav-item pl-3">
-                    <p class="m-0 font-weight-bold  fs-16"> Nome do usuario(a)</p>
+                    <p class="m-0 font-weight-bold  "> Nome do usuario(a)</p>
                 </li>
                 <li class=" nav-item pl-3">
                     <a href="">
-                        <p class="m-0  fs-16">
+                        <p class="m-0  ">
                             <i class="fa fa-pencil-square-o " aria-hidden="true"></i>
                         </p>
                     </a>
@@ -24,7 +24,7 @@
 
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 <li class="nav-item active">
-                    <a class="m-0 font-weight-bold  fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    <a class="m-0 font-weight-bold  " routerLink="/entrar">Sair <i class="fa fa-sign-out pl-1" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
