--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,9 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
 
+/*coomponentes extras*/
+
+*margin {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: linear-gradient(rgba(182, 182, 182, 0.159), rgba(182, 182, 182, 0.138)), url("https://i.imgur.com/FGrvS6j.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
 /*estilo*/
 
 .footerfundo {
-    background: linear-gradient(rgba(51, 51, 51, 0.192), rgba(9, 0, 0, 0.349));
+    background: linear-gradient(rgba(39, 0, 0, 0.159), rgba(255, 123, 0, 0.138));
+    font-family: 'Cinzel', serif;
+}
+
+.footerfundo2 {
+    background: linear-gradient(rgba(55, 1, 1, 0.604), rgba(0, 0, 0, 0.652));
     font-family: 'Cinzel', serif;
 }
 
@@ -20,17 +39,16 @@ ul.social-network li {
 
 .fa {
     font-size: 25pt;
-    color: rgb(38, 2, 2);
+    color: rgb(243, 234, 211);
     padding: 10px;
 }
 
 .fa-linkedin-square:hover,
 .fa-github-square:hover {
-    color: brown;
+    color: rgb(255, 183, 0);
 }
 
 h4 {
-    font-weight: bold;
-    font-size: 1.3rem;
-    color: black;
+    font-size: 1.5rem;
+    color: #ffffff;
 }
