--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -15,7 +15,7 @@
                         </div>
 
                         <div class="form-group campo">
-                            <input type="text" id="usuario" class="form-control" required/>
+                            <input type="email" id="usuario" class="form-control" required/>
                             <label for="usuario"> Usuário:</label>
                         </div>
 
