--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -10,53 +10,53 @@
 
                         <div class="form-group campo">
 
-                            <input type="text" id="nome" class="form-control" required/>
+                            <input type="text" id="nome" class="form-control" required [(ngModel)]="usuarioCad.nome" />
                             <label for="nome"> Nome:</label>
                         </div>
 
-                        <div class="form-group campo">
-                            <input type="email" id="usuario" class="form-control" required/>
+                        <div class="form-group campo ">
+                            <input type="email" id="usuario" class="form-control" required [(ngModel)]="usuarioCad.usuario" />
                             <label for="usuario"> Usuário:</label>
                         </div>
 
                         <div class=" form-group campo">
-                            <input type="text " id="foto " class="form-control" required />
-                            <label for="foto "> Link da Foto:</label>
+                            <input type="text" id="foto" class="form-control " required [(ngModel)]="usuarioCad.imagem_perfil" />
+                            <label for="foto"> Link da Foto:</label>
 
                         </div>
 
-                        <div class=" form-group campo">
-                            <input type="password " id="suario " class="form-control " required />
-                            <label for="senha "> Senha:</label>
+                        <div class=" form-group campo ">
+                            <input type="password" id="senha" class="form-control " required (input)='confirmSenha($event)' />
+                            <label for="senha"> Senha:</label>
 
                         </div>
 
-                        <div class="form-group campo">
-                            <input type="password" id="confirSenha " class="form-control " required />
+                        <div class="form-group campo ">
+                            <input type="password" id="confirSenha" class="form-control " required [(ngModel)]="usuarioCad.senha" />
                             <label for="confirSenha "> Confirmar senha:</label>
 
                         </div>
 
-                        <div class="form-group  ">
-                            <label for="dataNasc " class="mb-2 textoColor"> Data de Nascimento:</label>
-                            <input class="form-control " type="date" id="dataNasc" name="dataNasc" />
+                        <div class="form-group ">
+                            <label for="dataNasc" class="mb-2 textoColor "> Data de Nascimento:</label>
+                            <input class="form-control " type="date" id="dataNasc" name="dataNasc" [(ngModel)]="usuarioCad.dataNascimento" />
 
 
                         </div>
 
 
-                        <div class="form-group textoColor mt-4">
+                        <div class="form-group textoColor mt-4 ">
                             <label for="tipo "> Tipo de Usuário:</label>
-                            <select class="form-control " name="tipo " id="tipo ">
+                            <select class="form-control" name="tipo" id="tipo" (change)="tipoUser($event)">
                                 <option >Selecione um tipo de usuário</option>
-                                <option value="normal ">Normal</option>
-                                <option value="adm ">Administrador</option>
+                                <option value="normal">Normal</option>
+                                <option value="adm">Administrador</option>
                             </select>
                         </div>
 
-                        <div class="d-flex justify-content-around mt-4 mb-3">
-                            <button type="submit " class="btn btn-outline-danger px-5 button1" routerLink="/entrar">Cancelar </button>
-                            <button type="submit " class="btn btn-outline-success px-5 button2">Cadastrar</button>
+                        <div class="d-flex justify-content-around mt-4 mb-3 ">
+                            <button type="submit" class="btn btn-outline-danger px-5 button1" routerLink='/entrar'>Cancelar </button>
+                            <button type="submit" class="btn btn-outline-success px-5 button2" (click)='cadastrar()'>Cadastrar</button>
 
                         </div>
 
