--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <body>
 
-
+    <app-menu *ngIf='auth.logado()'></app-menu>
     <router-outlet></router-outlet>
-    <app-rodape></app-rodape>
+    <app-rodape *ngIf='auth.logado()'></app-rodape>
 
     <!-- 
          <app-menu></app-menu>
