--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,79 @@
-<p>inicio works!</p>
+<body>
+    <div class="container-fluid">
+
+        <div class="row bg-secondary d-flex align-items-center">
+
+            <div class="col-md-6">
+
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-6">
+
+                        <h1 class="text-white">Seja bem vindo!</h1>
+                        <h5>Use esse espaço, para expor suas ideias e pensamentos!!</h5>
+
+                    </div>
+                </div>
+
+                <div class="row d-flex justify-content-center mt-5">
+                    <div class="col-md-6">
+
+                        <button class="btn btn-dark mr-3" data-toggle="modal" data-target="#exampleModal">Publicar</button>
+                        <button class="btn btn-dark ">Ver Postagem</button>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <img src="https://i.imgur.com/4yAAXqS.gif" alt="" height="250px">
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="container">
+
+        <nav>
+            <div class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
+                <a class="nav-link active" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas as Postagens</a>
+                <a class="nav-link" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
+                <a class="nav-link" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
+            </div>
+        </nav>
+
+        <div class="tab-content " id="myTabContent">
+            <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
+                <h1 class="text-light">Todas postagens</h1>
+            </div>
+            <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
+                <h1 class="text-light">Minhas postagens</h1>
+            </div>
+            <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
+                <h1 class="text-light">Tema</h1>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
