--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -24,7 +24,8 @@
 
             <ul class="navbar-nav ml-auto d-flex align-items-center">
                 <li class="nav-item active">
-                    <a class="m-0 font-weight-bold  " routerLink="/entrar">Sair <i class="fa fa-sign-out pl-1" aria-hidden="true"></i>
+                    <a class="m-0 font-weight-bold  ">Sair <i class="fa fa-sign-out pl-1" aria-hidden="true"></i>
+                        <!-- routerLink="/entrar" -->
                     </a>
                 </li>
             </ul>
