--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -15,3 +15,11 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+.fs-54 {
+    font-size: 44pt;
+}
+
+.fs-18 {
+    font-size: 18pt;
+}
