--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -8,31 +8,31 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
 
-                        <h1 class="text-white">Seja bem vindo!</h1>
-                        <h5>Use esse espaço, para expor suas ideias e pensamentos!!</h5>
+                        <h1 class="text-white fs-54">Seja bem vindo!</h1>
+                        <h5 class="fs-18">Use esse espaço, para expor suas ideias e pensamentos!!</h5>
 
                     </div>
                 </div>
 
-                <div class="row d-flex justify-content-center mt-5">
+                <div class="row d-flex justify-content-center mt-2">
                     <div class="col-md-6">
 
-                        <button class="btn btn-dark mr-3" data-toggle="modal" data-target="#exampleModal">Publicar</button>
-                        <button class="btn btn-dark ">Ver Postagem</button>
+                        <button class="btn btn-dark mr-3" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                        <a class="btn btn-outline-light " href="#postagens">Ver Postagens</a>
 
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <img src="https://i.imgur.com/4yAAXqS.gif" alt="" height="250px">
+            <div class="col-md-6 d-flex justify-content-center">
+                <img src="https://i.imgur.com/RQmgEwc.png" alt="" width="500px" height="500px">
             </div>
 
         </div>
 
     </div>
 
-    <div class="container">
+    <div class="container" id="postagens">
 
         <nav>
             <div class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
@@ -57,21 +57,37 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="novaPostagem" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Nova Postagem</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="form-group">
+                        <label for="titulo">Título</label>
+                        <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="texto">Texto</label>
+                        <textarea name="texto" class="form-control" id="texto" placeholder="Digite o testo" rows="3"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="texto">Escolha tema ou <a href=""> cadastre um novo</a>: </label>
+                        <select name="tema" id="tema" class="form-control">
+                            <option value="">Temas</option>
+                        </select>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-outline-success">Publicar</button>
                 </div>
             </div>
         </div>
