Adicionando a tela tema

--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -5,17 +5,6 @@
 
 /*edit conteudo*/
 
-*margin {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-image: linear-gradient(rgba(182, 182, 182, 0.159), rgba(182, 182, 182, 0.138)), url("https://i.imgur.com/FGrvS6j.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 #img-bg {
     background-image: linear-gradient(rgba(80, 3, 3, 0.4), rgba(19, 18, 18, 0.4)), url("https://i.imgur.com/4yAAXqS.gif");
     min-height: 100vh;
@@ -46,12 +35,6 @@ body {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-}
-
-input:focus {
-    box-shadow: 0 0 0 0;
-    border: 0 none;
-    outline: 0;
 }
 
 .caixaLogin .campo {
@@ -91,10 +74,6 @@ select {
 }
 
 input:focus {
-    color: #290000;
-    font-family: 'Cinzel', serif;
-    background-color: transparent;
-    /*campo*/
     box-shadow: 0 0 0 0;
     border: 0 none;
     outline: 0;
@@ -109,16 +88,33 @@ h1 {
     margin-bottom: 2rem;
 }
 
+
+/*editando os botões*/
+
 .button1 {
+    font-size: 11pt;
     font-family: 'Cinzel', serif;
-    background-color: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-    color: #ffffff;
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(202, 3, 3);
+}
+
+.button1:hover {
+    font-family: 'Cinzel', serif;
+    background-color: rgb(36, 0, 0);
+    color: rgb(255, 183, 0);
     border: 1px solid rgb(202, 3, 3);
 }
 
 .button2 {
+    font-size: 11pt;
     font-family: 'Cinzel', serif;
-    background-color: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-    color: #ffffff;
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(3, 202, 43);
+}
+
+.button2:hover {
+    font-family: 'Cinzel', serif;
+    background-color: rgb(36, 0, 0);
+    color: rgb(255, 183, 0);
     border: 1px solid rgb(3, 202, 43);
 }
