--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,14 +1,14 @@
 <body>
     <div class="container-fluid">
 
-        <div class="row bg-secondary d-flex align-items-center">
+        <div class="row caixaTexto d-flex align-items-center">
 
             <div class="col-md-6">
 
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
 
-                        <h1 class="text-white fs-54">Seja bem vindo!</h1>
+                        <h1 class="text-white fs-54">Seja bem vindes, <span>{{nome}}</span>!</h1>
                         <h5 class="fs-18">Use esse espaço, para expor suas ideias e pensamentos!!</h5>
 
                     </div>
@@ -17,68 +17,68 @@
                 <div class="row d-flex justify-content-center mt-2">
                     <div class="col-md-6">
 
-                        <button class="btn btn-dark mr-3" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
-                        <a class="btn btn-outline-light " href="#postagens">Ver Postagens</a>
+                        <button type="submit" class="btn button1 mr-1 " data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                        <a type="submit" class=" btn  button2" href="#postagens">Ver Postagens</a>
 
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 d-flex justify-content-center">
-                <img src="https://i.imgur.com/RQmgEwc.png" alt="" width="500px" height="500px">
+                <img src="https://i.imgur.com/sJow3XT.png" alt="" width="400px" height="400px">
             </div>
 
         </div>
 
     </div>
 
-    <div class="container" id="postagens">
+    <div class="container mt-0" id="postagens">
 
         <nav>
-            <div class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
-                <a class="nav-link active" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas as Postagens</a>
-                <a class="nav-link" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
-                <a class="nav-link" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
+            <div class="nav nav-tabs d-flex justify-content-center " id="myTab" role="tablist">
+                <a class="nav-link  active corNav" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas as Postagens</a>
+                <a class="nav-link corNav" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
+                <a class="nav-link corNav" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
             </div>
         </nav>
 
-        <div class="tab-content " id="myTabContent">
+        <div class="tab-content mb-3 " id="myTabContent">
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
-                <h1 class="text-light">Todas postagens</h1>
+                <h1 class="ediText">Todas postagens</h1>
             </div>
             <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
-                <h1 class="text-light">Minhas postagens</h1>
+                <h1 class="ediText">Minhas postagens</h1>
             </div>
             <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
-                <h1 class="text-light">Tema</h1>
+                <h1 class="ediText">Tema</h1>
             </div>
         </div>
 
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="novaPostagem" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade " id="novaPostagem" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
+            <div class="modal-content colorCaixa ">
+                <div class="modal-header ediTitulo">
                     <h5 class="modal-title" id="exampleModalLabel">Nova Postagem</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
+                    <div class="form-group campo">
                         <label for="titulo">Título</label>
                         <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group campo">
                         <label for="texto">Texto</label>
                         <textarea name="texto" class="form-control" id="texto" placeholder="Digite o testo" rows="3"></textarea>
                     </div>
 
-                    <div class="form-group">
-                        <label for="texto">Escolha tema ou <a href=""> cadastre um novo</a>: </label>
+                    <div class="form-group textoColor">
+                        <label for="texto">Escolha tema ou <a routerLink='/tema' data-dismiss="modal"> cadastre um novo</a>: </label>
                         <select name="tema" id="tema" class="form-control">
                             <option value="">Temas</option>
                         </select>
@@ -86,10 +86,12 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-outline-success">Publicar</button>
+                    <button type="button" class="btn buttoncli1" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn buttoncli2">Publicar</button>
                 </div>
             </div>
         </div>
     </div>
+
+
 </body>
