--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -2,7 +2,8 @@
 
 /*coomponentes extras*/
 
-*margin {
+
+/* *margin {
     margin: 0;
     padding: 0;
 }
@@ -11,7 +12,7 @@ body {
     background-image: linear-gradient(rgba(182, 182, 182, 0.159), rgba(182, 182, 182, 0.138)), url("https://i.imgur.com/FGrvS6j.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
+} */
 
 
 /*estilo*/
