--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -7,8 +7,8 @@
                     <div class="col-md-6">
                         <h1 class="text-center mt-4 mb-5 "> ENTRAR </h1>
                         <div class="form-group campo">
-                            <input type="email" id="usuario" class="form-control" required [(ngModel)]="usuarioLogin.usuario" />
-                            <label for="usuario"> Usuário:</label>
+                            <input type="email" id="usuarioLg" class="form-control preencher-validate" required (blur)="validatePreenchido()" [(ngModel)]="usuarioLogin.usuario" />
+                            <label for="usuarioLg"> Usuário:</label>
                         </div>
                         <div class="form-group campo">
                             <input type="password" placeholder="" id="senha" class="form-control" required [(ngModel)]="usuarioLogin.senha" />
