--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="col-md-6 d-flex justify-content-center">
-                <img src="https://i.imgur.com/sJow3XT.png" alt="" width="400px" height="400px">
+                <img src="https://i.imgur.com/O4BirBt.gif" alt="" width="400px" height="400px">
             </div>
 
         </div>
@@ -68,20 +68,24 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group campo">
+                        <input type="text" class="form-control" id="titulo" required>
                         <label for="titulo">Título</label>
-                        <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
                     </div>
 
                     <div class="form-group campo">
+                        <textarea name="texto" class="form-control" id="texto" required rows="3"></textarea>
                         <label for="texto">Texto</label>
-                        <textarea name="texto" class="form-control" id="texto" placeholder="Digite o testo" rows="3"></textarea>
+
+
                     </div>
 
-                    <div class="form-group textoColor">
+                    <div class="form-group ">
                         <label for="texto">Escolha tema ou <a routerLink='/tema' data-dismiss="modal"> cadastre um novo</a>: </label>
+
                         <select name="tema" id="tema" class="form-control">
                             <option value="">Temas</option>
                         </select>
+
                     </div>
 
                 </div>
