--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -90,8 +90,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn buttoncli1" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn buttoncli2">Publicar</button>
+                    <button type="button" class="btn buttoncli1 px-5" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn buttoncli2 px-5">Publicar</button>
                 </div>
             </div>
         </div>
