--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -20,6 +20,12 @@
                         </p>
                     </a>
                 </li>
+                <li class=" nav-item pl-5">
+
+                    <a routerLink="/inicio" class=" text-left">
+                        <i class="fa fa-home" aria-hidden="true"></i>
+                    </a>
+                </li>
             </ul>
 
             <ul class="navbar-nav ml-auto d-flex align-items-center">
