--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -4,10 +4,7 @@
 
         <div class="row caixaTexto">
             <div class="col-md-12 text-white">
-                <a routerLink="/inicio" class=" text-left">
 
-                    <i class="fa fa-angle-double-left" aria-hidden="true"></i> Início
-                </a>
                 <h1 class="fs-54 text-center ediTitulo">Temas</h1>
                 <h5 class="fs-18 text-center"> Veja aqui todos os temas cadastrados ou cadastre um novo:</h5>
 
@@ -15,10 +12,10 @@
                     <div class="col-md-3">
 
                         <div class="form-group campo">
-                            <input type="text" class="form-control" id="descricao" placeholder="Digiote a descrição do tema">
+                            <input type="text" class="form-control" id="descricao" placeholder="Digiote a descrição do tema" [(ngModel)]='temaCad.descricao'>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button class="btn button2">Cadastrar</button>
+                            <button class="btn button2 px-5" (click)='cadastrarTema()'>Cadastrar</button>
                         </div>
                     </div>
                 </div>
@@ -43,31 +40,24 @@
                 <!-- table-hover -->
                 <table class="table table-hover tablecor">
                     <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Primeiro</th>
-                            <th scope="col">Último</th>
-                            <th scope="col">Nickname</th>
+                        <tr class="text-center">
+                            <th scope="col">Id</th>
+                            <th scope="col ">Primeiro</th>
+                            <th scope="col">Opções</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                    <tbody class="tbodycolo text-center">
+                        <tr *ngFor='let temaList of listaTemas'>
+                            <th scope="row">{{temaList.id}}</th>
+                            <th>{{temaList.descricao}}</th>
+                            <th class="d-flex justify-content-end">
+
+                                <button type="submit" class=" btn  button3  mr-3" [routerLink]="['/tema-edit', temaList.id]">Editar</button>
+                                <button type="submit" class=" btn  button1 " [routerLink]="['/tema-delete', temaList.id]">Apagar</button>
+
+                            </th>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
-                        </tr>
+
                     </tbody>
                 </table>
 
