--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -7,19 +7,15 @@
 
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-6">
-
                         <h1 class="text-white fs-54">Seja bem vindes, <span>{{nome}}</span>!</h1>
                         <h5 class="fs-18">Use esse espaço, para expor suas ideias e pensamentos!!</h5>
-
                     </div>
                 </div>
 
                 <div class="row d-flex justify-content-center mt-2">
                     <div class="col-md-6">
-
                         <button type="submit" class="btn button1 mr-1 " data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
                         <a type="submit" class=" btn  button2" href="#postagens">Ver Postagens</a>
-
                     </div>
                 </div>
             </div>
@@ -37,21 +33,83 @@
         <nav>
             <div class="nav nav-tabs d-flex justify-content-center " id="myTab" role="tablist">
                 <a class="nav-link  active corNav" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas as Postagens</a>
-                <a class="nav-link corNav" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
+                <a class="nav-link corNav" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false" (click)='findByIdUsu()'>Minhas Postagens</a>
                 <a class="nav-link corNav" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
             </div>
         </nav>
 
-        <div class="tab-content mb-3 " id="myTabContent">
+        <div class="tab-content mb-3 mt-5" id="myTabContent">
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
-                <h1 class="ediText">Todas postagens</h1>
+                <!-- <h1 class="ediText">Todas postagens</h1> -->
+                <div class="card-columns">
+
+                    <div class="card border-dark mb-3" style="max-width: 18rem;">
+
+                        <div class="card-text" *ngFor='let itens of listaPostagens'>
+                            <!-- os valores itens.usuario.nome está buscando na model Postagem no FK de Usuario o atributo nome  -->
+                            <div class="card-header">
+                                <p class="card-text"><small class="text-muted">Por: {{itens.usuario.nome}}</small></p>
+                            </div>
+
+                            <div class="card-body text-dark m-0">
+                                <h5 class="card-title mb-3">{{itens.titulo}}</h5>
+                                <small class="text-muted">Tema: {{itens.tema.descricao}}</small>
+                                <p class="card-text">{{itens.texto}}</p>
+                                <p class="card-text"><small class="text-muted">Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} </small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
             <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
-                <h1 class="ediText">Minhas postagens</h1>
+                <!-- ! <h1 class="ediText">Minhas postagens</h1> -->
+                <div class="card-columns">
+                    <div class="card border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-text" *ngFor='let itens of usuarioFK.postagem'>
+                            <div class="card-body text-dark ">
+                                <h5 class="card-title m-0">{{itens.titulo}}</h5>
+                                <!-- <small class="text-muted mb-3">Tema: {{itens.tema.descricao}}</small> -->
+                                <p class="card-text mt-3">{{itens.texto}}</p>
+                                <p class="card-text">
+                                    <small class="text-muted">                                    
+                                    Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} 
+                                    </small>
+                                </p>
+
+                                <button type="submit" class=" btn  buttonEdi1  mr-3" [routerLink]="['/postagem-edit', itens.id]">Editar</button>
+                                <button type="submit" class=" btn  buttonEdi2 " [routerLink]="['/postagem-delete', itens.id]">Apagar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
-                <h1 class="ediText">Tema</h1>
+                <!-- <h1 class="ediText">Tema</h1> -->
+
+                <div class="card-columns" *ngFor='let temas of listaTemas'>
+                    <div class="card border-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-text" *ngFor='let itens of temas.postagem'>
+                            <div class="card-body text-dark ">
+                                <h5 class="card-title m-0">{{itens.titulo}}</h5>
+                                <p class="card-text mt-3">{{itens.texto}}</p>
+                                <p class="card-text">
+                                    <small class="text-muted">                                    
+                                    Publicado em: {{itens.data | date: 'dd/MM/yyyy'}} ás {{itens.data | date: 'HH:mm'}} 
+                                    </small>
+                                </p>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
             </div>
+
         </div>
 
     </div>
@@ -68,30 +126,27 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group campo">
-                        <input type="text" class="form-control" id="titulo" required>
+                        <input type="text" class="form-control" id="titulo" required [(ngModel)]='postagem.titulo '>
                         <label for="titulo">Título</label>
                     </div>
 
                     <div class="form-group campo">
-                        <textarea name="texto" class="form-control" id="texto" required rows="3"></textarea>
+                        <textarea name="texto" class="form-control" id="texto" required rows="3" [(ngModel)]='postagem.texto '></textarea>
                         <label for="texto">Texto</label>
-
-
                     </div>
 
                     <div class="form-group ">
                         <label for="texto">Escolha tema ou <a routerLink='/tema' data-dismiss="modal"> cadastre um novo</a>: </label>
 
-                        <select name="tema" id="tema" class="form-control">
-                            <option value="">Temas</option>
+                        <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                            <option value="{{temaList.id}}" *ngFor='let temaList of listaTemas'>{{temaList.descricao}}</option>
                         </select>
-
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn buttoncli1 px-5" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn buttoncli2 px-5">Publicar</button>
+                    <button type="button" class="btn buttoncli2 px-5" (click)='publicar() '>Publicar</button>
                 </div>
             </div>
         </div>
